# minimal-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
src/mcp_hello.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/minimal_mcp_server.egg-info/: PKG-INFO  SOURCES.txt
